--- a/static/arpita.jpeg/index.html
+++ b/static/arpita.jpeg/index.html
@@ -3,21 +3,19 @@
     <head>
         <meta charset="UTF-8"><base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-        <title>README.ftd</title>
+        <title>static/arpita.jpeg.ftd</title>
         <script type="ftd" id="ftd-data">{
-  "arjaupashak.com/README/#content@0": {
-    "value": "# arpita-blog\n\nThis template allows you to get started with a [FPM](https://fpm.dev) powered blog.",
+  "arjaupashak.com/static/arpita.jpeg/#src@0": {
+    "value": {
+      "$kind$": "light",
+      "dark": "-/arjaupashak.com/static/arpita.jpeg",
+      "light": "-/arjaupashak.com/static/arpita.jpeg"
+    },
     "dependencies": {
       "0": [
         {
           "condition": null,
           "dependency_type": "Value",
-          "parameters": {},
-          "remaining": null
-        },
-        {
-          "condition": "$IsNotNull$",
-          "dependency_type": "Visible",
           "parameters": {},
           "remaining": null
         }
@@ -31,7 +29,27 @@
   "ftd#dark-mode": {
     "value": false,
     "dependencies": {
-      "$value#kind$": []
+      "$value#kind$": [
+        {
+          "condition": true,
+          "dependency_type": "Variable",
+          "parameters": {
+            "arjaupashak.com/static/arpita.jpeg/#src@0": {
+              "default": {
+                "important": false,
+                "reference": null,
+                "value": "light"
+              },
+              "value": {
+                "important": false,
+                "reference": null,
+                "value": "dark"
+              }
+            }
+          },
+          "remaining": null
+        }
+      ]
     }
   },
   "ftd#desktop-breakpoint": {
@@ -492,9 +510,7 @@ body.fpm-dark .ft_md a:visited code {
 }</style>
     </head>
     <body>
-        <div data-id="main:root" style="align-items: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; flex-wrap: nowrap; height: 100%; justify-content: flex-start; text-decoration: none; white-space: initial; width: 100%" ><div data-id="0:main" style="border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; line-height: 26px; text-align: left; text-decoration: none; white-space: initial" class="ft_md"><p data-id="0,0:main" style="border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; line-height: 26px; text-align: left; text-decoration: none; white-space: initial" class="ft_md"><h1>arpita-blog</h1>
-</p><p data-id="0,1:main" style="border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; line-height: 26px; text-align: left; text-decoration: none; white-space: initial" class="ft_md"><p>This template allows you to get started with a <a href="https://fpm.dev">FPM</a> powered blog.</p>
-</p></div></div><style>
+        <div data-id="main:root" style="align-items: flex-start; border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; flex-wrap: nowrap; height: 100%; justify-content: flex-start; text-decoration: none; white-space: initial; width: 100%" ><img alt="" data-id="0:main" src="-/arjaupashak.com/static/arpita.jpeg" style="border-radius: 0px; border-style: solid; border-width: 0px; box-sizing: border-box; text-decoration: none; white-space: initial"></div><style>
 
 
 
