--- a/README/index.html
+++ b/README/index.html
@@ -46,6 +46,25 @@
           "condition": "mobile",
           "dependency_type": "Variable",
           "parameters": {
+            "arjaupashak.com/FPM/config#is-mobile": {
+              "default": {
+                "important": false,
+                "reference": null,
+                "value": false
+              },
+              "value": {
+                "important": false,
+                "reference": null,
+                "value": true
+              }
+            }
+          },
+          "remaining": null
+        },
+        {
+          "condition": "mobile",
+          "dependency_type": "Variable",
+          "parameters": {
             "dms#is-mobile": {
               "default": {
                 "important": false,
