--- a/FASTN/ds/index.html
+++ b/FASTN/ds/index.html
@@ -6,9 +6,15 @@
 
 <link rel="shortcut icon" href="/-/arjaupashak.com/static/favicon.png" type="image/png">
 
-<script src="markdown-37D647982059462973339C58D1F7A18E3FDACCF47927ECB9B9B5E23A98008187.js"></script>
+<script>
+let __fastn_package_name__ = "arjaupashak.com";
+
+</script>
+
+
+<script src="markdown-BAEDD5DFCDD5DBEC8FC55F8804199879E276781A8879AD94F0C7DDA0F7069C74.js"></script>
 <script src="prism-8FE3A42AD547E2DBBC9FE16BA059F8F1870D613AD0C5B0B013D6205B72A62BAF.js"></script>
-<script src="default-7FF183F5916470AD2279D40584BC68C39CF9139C666D941049EC2F7749B9F611.js"></script>
+<script src="default-C02C8911499D7265E7D14A910501CF2C6D904C16166658F46D42B04F4A59BF53.js"></script>
 <link rel="stylesheet" href="prism-73F718B9234C00C5C14AB6A11BF239A103F0B0F93B69CD55CB5C6530501182EB.css">
 
 
@@ -101,9 +107,8 @@ height: 100%;
 width: 100%;
 }
 
-input, code {
+input {
 vertical-align: middle;
-font: inherit;
 }
 pre {
 white-space: break-spaces;
@@ -238,6 +243,11 @@ border-radius: 50%;
 background: #c1c8ce;
 }
 
+ul, ol {
+/* Added padding to the left to move the ol number/ ul bullet to the right */
+padding-left: 20px;
+}
+
 a {
 color: #2952a3;
 }
@@ -303,6 +313,21 @@ h1:only-child {
 margin-block-end: 0.67em
 }
 
+table, td, th {
+border: 1px solid;
+}
+
+th {
+padding: 6px;
+}
+
+td {
+padding-left: 6px;
+padding-right: 6px;
+padding-top: 3px;
+padding-bottom: 3px;
+}
+
 </style>
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
@@ -312,9 +337,13 @@ margin-block-end: 0.67em
 </style>
 <script>
 (function() {
-let global = {
-};
 let main = function (parent) {
+let __fastn_super_package_name__ = __fastn_package_name__;
+__fastn_package_name__ = "arjaupashak_com";
+try {
+} finally {
+__fastn_package_name__ = __fastn_super_package_name__;
+}
 }
 global["main"] = main;
 fastn_dom.codeData.availableThemes["coldark-theme.dark"] = "code-theme-9A3284FD117DFF7CFD432FF860A5E14169FA592BC3DA4F5E8A6975143F5EA07F.css";
