deploy: 4d7bdfcc405e1892ee51125bd6dc7125e8b41ae2

--- a/ddd/preflight-cors-issue/index.html
+++ b/ddd/preflight-cors-issue/index.html
@@ -5090,6 +5090,43 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
       return record;
     }()]));
     return record;
+  }(),
+  function () {
+    let record = fastn.recordInstance({
+    });
+    record.set("title", "Designing data intensive application");
+    record.set("url", "ddd/data-intensive-application/");
+    record.set("description", null);
+    record.set("path", null);
+    record.set("number", null);
+    record.set("font_icon", null);
+    record.set("img_src", null);
+    record.set("bury", false);
+    record.set("document", null);
+    record.set("is_heading", false);
+    record.set("is_disabled", false);
+    record.set("is_active", false);
+    record.set("is_open", false);
+    record.set("children", fastn.mutableList([function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "Reliable Scalable and Maintainable Application");
+      record.set("url", "ddd/dia-1/");
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }()]));
+    return record;
   }()]));
   record.set("current_section", function () {
     let record = fastn.recordInstance({
@@ -8291,6 +8328,43 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
       });
       record.set("title", "Preflight Request");
       record.set("url", "learn/preflight-request/");
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }()]));
+    return record;
+  }(),
+  function () {
+    let record = fastn.recordInstance({
+    });
+    record.set("title", "Designing data intensive application");
+    record.set("url", "ddd/data-intensive-application/");
+    record.set("description", null);
+    record.set("path", null);
+    record.set("number", null);
+    record.set("font_icon", null);
+    record.set("img_src", null);
+    record.set("bury", false);
+    record.set("document", null);
+    record.set("is_heading", false);
+    record.set("is_disabled", false);
+    record.set("is_active", false);
+    record.set("is_open", false);
+    record.set("children", fastn.mutableList([function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "Reliable Scalable and Maintainable Application");
+      record.set("url", "ddd/dia-1/");
       record.set("description", null);
       record.set("path", null);
       record.set("number", null);
