--- a/ddd/data-intensive-application/index.html
+++ b/ddd/data-intensive-application/index.html
@@ -333,18 +333,10 @@ td {
     </style>
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-<body data-id="1"><div data-id="2" class="ft_column __w-1 __h-2"><div data-id="3" class="ft_column ft_full_size"><div data-id="4" class="ft_column __w-3 __h-4 __bgc-5"><comment data-id="5"></comment><div data-id="6" class="ft_column"><comment data-id="7"></comment></div><comment data-id="8"></comment><comment data-id="9"></comment><div data-id="11" class="ft_column __w-6 __bgc-7"><div data-id="12" class="ft_column"><comment data-id="13"></comment></div><div data-id="14" class="ft_column __w-8"><comment data-id="15"></comment><comment data-id="16"></comment><comment data-id="17"></comment><comment data-id="18"></comment><div data-id="20" class="ft_column __w-9 __bgc-10"><div data-id="21" class="ft_row __w-11 __pl-12 __pr-13 __pt-14 __pb-15 __jc-16 __ali-17"><div data-id="22" class="ft_column"></div><div data-id="23" class="ft_row __w-18 __g-19"><img data-id="24" src="-/fastn-community.github.io/doc-site/static/header/hamburger.svg" class="__cur-20 __as-21 __w-22"></img><comment data-id="25"></comment><img data-id="26" src="-/arjaupashak.com/static/logo.svg" class="__h-23"></img><comment data-id="27"></comment><comment data-id="28"></comment><comment data-id="29"></comment></div><comment data-id="30"></comment></div><div data-id="31" class="ft_row __w-24 __bgc-25"></div><div data-id="32" class="ft_row __w-26"><div data-id="33" class="ft_row __as-27"><comment data-id="34"></comment><a data-id="35" href="ddd/" class="__rl-28 __w-29 __pl-30 __pr-31 __pt-32 __pb-33 __c-34 __bgc-35 __white-space-36">My Day to Day Learnings and Discoveries</a></div><div data-id="36" class="ft_row __w-37 __pt-38 __ox-39 __g-40"><comment data-id="37"></comment><div data-id="38" class="ft_column __cur-41"><comment data-id="39"></comment><a data-id="40" href="ddd/funny-github-workflow/" class="__rl-42 __pl-43 __ml-44 __c-45 __white-space-46">Personal</a></div><div data-id="41" class="ft_column __cur-47"><comment data-id="42"></comment><a data-id="43" href="/fifthtry/" class="__rl-48 __pl-49 __ml-50 __c-51 __white-space-52">FifthTry</a></div><div data-id="44" class="ft_column __cur-53"><comment data-id="45"></comment><a data-id="46" href="/rust/" class="__rl-54 __pl-55 __ml-56 __c-57 __white-space-58">Rust</a></div></div></div><comment data-id="47"></comment><div data-id="48" class="ft_row __cur-59 __w-60 __pl-61 __pr-62 __bgc-63"><div data-id="49" class="ft_row __w-64 __pt-65 __pb-66 __g-67"><comment data-id="50"></comment><div data-id="51" class="__rl-68 __c-69 __white-space-70">Personal</div><comment data-id="52"></comment><comment data-id="53"></comment><div data-id="54" class="ft_row"><comment data-id="55"></comment><div data-id="56" class="ft_row"><div data-id="57" class="__rl-71 __c-72 __white-space-73">-&gt;</div></div></div><comment data-id="58"></comment><div data-id="59" class="__rl-74 __c-75 __white-space-76">Funny github workflow behaviour</div></div><div data-id="60" class="ft_row __as-77 __h-78"><div data-id="61" class="ft_row __as-79 __w-80"><comment data-id="62"></comment><img data-id="63" src="-/fastn-community.github.io/header/static/down-arrow-dark.svg" class="__w-81 __h-82"></img><comment data-id="64"></comment></div></div><comment data-id="65"></comment></div></div></div><div data-id="66" class="ft_column __w-83 __pl-84 __pr-85 __pt-86 __pb-87"><div data-id="67" class="ft_column __w-88"><div data-id="68" class="ft_row __w-89"><comment data-id="69"></comment><div data-id="70" class="ft_column __w-90"><h1 data-id="71" id="funny-github-workflow-behaviour" class="__rl-91 __w-92 __mb-93 __bbw-94 __bc-95 __c-96">Funny github workflow behaviour</h1><comment data-id="72"></comment><div data-id="73" class="ft_column __w-97"></div></div><comment data-id="74"></comment></div><comment data-id="75"></comment></div><comment data-id="76"></comment><div data-id="77" class="ft_column __w-98"><comment data-id="78"></comment><div data-id="79" class="__rl-99 __w-100 __c-101"><p>Today, I encounter the weird behaviour on github workflow. We are using
-<a href="https://github.com/peaceiris/actions-gh-pages">peaceiris/actions-gh-pages</a>
-github action to deploy our static files to GitHub Pages.</p>
-<p>But everytime, this workflow action runs, the
-<a href="https://docs.github.com/en/pages/configuring-a-custom-domain-for-your-github-pages-site"><code>Custom domain</code></a>
-for github page site gets removed or unset and that results in site throwing 404.</p>
-<p>After lots of debugs, I have found that adding a Custom domain in Github
-pages pushes a new commit in the branch. This commit adds a <code>CNAME</code> file and
-that file contains the custom domain name.</p>
-<p>The <code>peaceiris/actions-gh-pages</code> delete all files (including <code>CNAME</code> file) inside the
-branch and dump the static files in <code>gh-pages</code> and hence lost the custom domain.</p>
-Then we have added CNAME file in our repo and BINGO! ✌️ it worked.</div><div data-id="80" class="ft_column __w-102 __g-103"><div data-id="81" class="ft_column __w-104 __mt-105 __g-106"></div></div></div><comment data-id="82"></comment><comment data-id="83"></comment></div><div data-id="84" class="ft_column __w-107"></div><comment data-id="85"></comment></div><div data-id="86" class="ft_row __pos-108 __p-109 __bw-110 __br-111 __bc-112 __b-113 __r-114 __z-115 __bgc-116"><comment data-id="87"></comment><div data-id="88" class="ft_row __cur-117"><img data-id="89" src="-/fastn-community.github.io/dark-mode-switcher/static/system-mode-active.png" class="__as-118 __w-119 __h-120"></img></div><comment data-id="90"></comment><comment data-id="91"></comment></div><comment data-id="92"></comment></div></div></div></body><style id="styles">
+<body data-id="1"><div data-id="2" class="ft_column __w-1 __h-2"><div data-id="3" class="ft_column ft_full_size"><div data-id="4" class="ft_column __w-3 __h-4 __bgc-5"><comment data-id="5"></comment><div data-id="6" class="ft_column"><comment data-id="7"></comment></div><comment data-id="8"></comment><comment data-id="9"></comment><div data-id="11" class="ft_column __w-6 __bgc-7"><div data-id="12" class="ft_column"><comment data-id="13"></comment></div><div data-id="14" class="ft_column __w-8"><comment data-id="15"></comment><comment data-id="16"></comment><comment data-id="17"></comment><comment data-id="18"></comment><div data-id="20" class="ft_column __w-9 __bgc-10"><div data-id="21" class="ft_row __w-11 __pl-12 __pr-13 __pt-14 __pb-15 __jc-16 __ali-17"><div data-id="22" class="ft_column"></div><div data-id="23" class="ft_row __w-18 __g-19"><img data-id="24" src="-/fastn-community.github.io/doc-site/static/header/hamburger.svg" class="__cur-20 __as-21 __w-22"></img><comment data-id="25"></comment><img data-id="26" src="-/arjaupashak.com/static/logo.svg" class="__h-23"></img><comment data-id="27"></comment><comment data-id="28"></comment><comment data-id="29"></comment></div><comment data-id="30"></comment></div><div data-id="31" class="ft_row __w-24 __bgc-25"></div><div data-id="32" class="ft_row __w-26"><div data-id="33" class="ft_row __as-27"><comment data-id="34"></comment><a data-id="35" href="ddd/" class="__rl-28 __w-29 __pl-30 __pr-31 __pt-32 __pb-33 __c-34 __bgc-35 __white-space-36">My Day to Day Learnings and Discoveries</a></div><div data-id="36" class="ft_row __w-37 __pt-38 __ox-39 __g-40"><comment data-id="37"></comment><div data-id="38" class="ft_column __cur-41"><comment data-id="39"></comment><a data-id="40" href="ddd/funny-github-workflow/" class="__rl-42 __pl-43 __ml-44 __c-45 __white-space-46">Personal</a></div><div data-id="41" class="ft_column __cur-47"><comment data-id="42"></comment><a data-id="43" href="/fifthtry/" class="__rl-48 __pl-49 __ml-50 __c-51 __white-space-52">FifthTry</a></div><div data-id="44" class="ft_column __cur-53"><comment data-id="45"></comment><a data-id="46" href="/rust/" class="__rl-54 __pl-55 __ml-56 __c-57 __white-space-58">Rust</a></div></div></div><comment data-id="47"></comment><div data-id="48" class="ft_row __cur-59 __w-60 __pl-61 __pr-62 __bgc-63"><div data-id="49" class="ft_row __w-64 __pt-65 __pb-66 __g-67"><comment data-id="50"></comment><div data-id="51" class="__rl-68 __c-69 __white-space-70">Personal</div><comment data-id="52"></comment><comment data-id="53"></comment><div data-id="54" class="ft_row"><comment data-id="55"></comment><div data-id="56" class="ft_row"><div data-id="57" class="__rl-71 __c-72 __white-space-73">-&gt;</div></div></div><comment data-id="58"></comment><div data-id="59" class="__rl-74 __c-75 __white-space-76">Designing data intensive application</div></div><div data-id="60" class="ft_row __as-77 __h-78"><div data-id="61" class="ft_row __as-79 __w-80"><comment data-id="62"></comment><img data-id="63" src="-/fastn-community.github.io/header/static/down-arrow-dark.svg" class="__w-81 __h-82"></img><comment data-id="64"></comment></div></div><comment data-id="65"></comment></div></div></div><div data-id="66" class="ft_column __w-83 __pl-84 __pr-85 __pt-86 __pb-87"><div data-id="67" class="ft_column __w-88"><div data-id="68" class="ft_row __w-89"><comment data-id="69"></comment><div data-id="70" class="ft_column __w-90"><h1 data-id="71" id="designing-data-intensive-application" class="__rl-91 __w-92 __mb-93 __bbw-94 __bc-95 __c-96">Designing Data Intensive Application</h1><comment data-id="72"></comment><div data-id="73" class="ft_column __w-97"></div></div><comment data-id="74"></comment></div><comment data-id="75"></comment></div><comment data-id="76"></comment><div data-id="77" class="ft_column __w-98"><comment data-id="78"></comment><div data-id="79" class="__rl-99 __w-100 __c-101">I am reading a much recommended book <a href="https://public.nikhil.io/Designing%20Data%20Intensive%20Applications.pdf"><code>Designing Data Intensive Application by Martin Kleppmann</code></a>.
+As I progress through its pages, I intend to distill key insights and findings
+into concise notes, supplemented by any additional research I conduct on the
+subject matter.</div><div data-id="80" class="ft_column __w-102 __g-103"><div data-id="81" class="ft_column __w-104 __mt-105 __g-106"></div></div></div><comment data-id="82"></comment><comment data-id="83"></comment></div><div data-id="84" class="ft_column __w-107"></div><comment data-id="85"></comment></div><div data-id="86" class="ft_row __pos-108 __p-109 __bw-110 __br-111 __bc-112 __b-113 __r-114 __z-115 __bgc-116"><comment data-id="87"></comment><div data-id="88" class="ft_row __cur-117"><img data-id="89" src="-/fastn-community.github.io/dark-mode-switcher/static/system-mode-active.png" class="__as-118 __w-119 __h-120"></img></div><comment data-id="90"></comment><comment data-id="91"></comment></div><comment data-id="92"></comment></div></div></div></body><style id="styles">
     .__w-1 { width: 100%; }
 	.__h-2 { height: 100%; }
 	.__w-3 { width: 100%; }
@@ -2460,8 +2452,8 @@ font-family: fifthtry-github-io-manrope-font-Manrope }
   __fastn_package_name__ = "arjaupashak_com";
   try {
     let parenti0 = arjaupashak_com_FASTN_ds__page(parent, inherited, {
-      title: "Funny github workflow behaviour",
-      body: "Today, I encounter the weird behaviour on github workflow. We are using\n[peaceiris/actions-gh-pages](https://github.com/peaceiris/actions-gh-pages)\ngithub action to deploy our static files to GitHub Pages.\n\nBut everytime, this workflow action runs, the\n[`Custom domain`](https://docs.github.com/en/pages/configuring-a-custom-domain-for-your-github-pages-site)\nfor github page site gets removed or unset and that results in site throwing 404.\n\nAfter lots of debugs, I have found that adding a Custom domain in Github\npages pushes a new commit in the branch. This commit adds a `CNAME` file and\nthat file contains the custom domain name.\n\nThe `peaceiris/actions-gh-pages` delete all files (including `CNAME` file) inside the\nbranch and dump the static files in `gh-pages` and hence lost the custom domain.\n\nThen we have added CNAME file in our repo and BINGO! ✌️ it worked."
+      title: "Designing Data Intensive Application",
+      body: "I am reading a much recommended book [`Designing Data Intensive Application by\nMartin Kleppmann`](https://public.nikhil.io/Designing%20Data%20Intensive%20Applications.pdf).\nAs I progress through its pages, I intend to distill key insights and findings\ninto concise notes, supplemented by any additional research I conduct on the\nsubject matter."
     });
   } finally {
     __fastn_package_name__ = __fastn_super_package_name__;
@@ -4753,7 +4745,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     record.set("is_heading", false);
     record.set("is_disabled", false);
     record.set("is_active", false);
-    record.set("is_open", true);
+    record.set("is_open", false);
     record.set("children", fastn.mutableList([function () {
       let record = fastn.recordInstance({
       });
@@ -4768,8 +4760,8 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
       record.set("document", null);
       record.set("is_heading", false);
       record.set("is_disabled", false);
-      record.set("is_active", true);
-      record.set("is_open", true);
+      record.set("is_active", false);
+      record.set("is_open", false);
       record.set("children", fastn.mutableList([]));
       return record;
     }(),
@@ -4845,8 +4837,8 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     record.set("document", null);
     record.set("is_heading", false);
     record.set("is_disabled", false);
-    record.set("is_active", false);
-    record.set("is_open", false);
+    record.set("is_active", true);
+    record.set("is_open", true);
     record.set("children", fastn.mutableList([function () {
       let record = fastn.recordInstance({
       });
@@ -4909,8 +4901,8 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
   record.set("current_page", function () {
     let record = fastn.recordInstance({
     });
-    record.set("title", "Funny github workflow behaviour");
-    record.set("url", "ddd/funny-github-workflow/");
+    record.set("title", "Designing data intensive application");
+    record.set("url", "ddd/data-intensive-application/");
     record.set("description", null);
     record.set("path", null);
     record.set("number", null);
@@ -4922,7 +4914,25 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
     record.set("is_disabled", false);
     record.set("is_active", true);
     record.set("is_open", true);
-    record.set("children", fastn.mutableList([]));
+    record.set("children", fastn.mutableList([function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "Reliable Scalable and Maintainable Application");
+      record.set("url", "ddd/dia-1/");
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }()]));
     return record;
   }());
   return record;
@@ -8006,7 +8016,7 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     record.set("is_heading", false);
     record.set("is_disabled", false);
     record.set("is_active", false);
-    record.set("is_open", true);
+    record.set("is_open", false);
     record.set("children", fastn.mutableList([function () {
       let record = fastn.recordInstance({
       });
@@ -8021,8 +8031,8 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
       record.set("document", null);
       record.set("is_heading", false);
       record.set("is_disabled", false);
-      record.set("is_active", true);
-      record.set("is_open", true);
+      record.set("is_active", false);
+      record.set("is_open", false);
       record.set("children", fastn.mutableList([]));
       return record;
     }(),
@@ -8098,8 +8108,8 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     record.set("document", null);
     record.set("is_heading", false);
     record.set("is_disabled", false);
-    record.set("is_active", false);
-    record.set("is_open", false);
+    record.set("is_active", true);
+    record.set("is_open", true);
     record.set("children", fastn.mutableList([function () {
       let record = fastn.recordInstance({
       });
@@ -8162,8 +8172,8 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
   record.set("current_page", function () {
     let record = fastn.recordInstance({
     });
-    record.set("title", "Funny github workflow behaviour");
-    record.set("url", "ddd/funny-github-workflow/");
+    record.set("title", "Designing data intensive application");
+    record.set("url", "ddd/data-intensive-application/");
     record.set("description", null);
     record.set("path", null);
     record.set("number", null);
@@ -8175,7 +8185,25 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
     record.set("is_disabled", false);
     record.set("is_active", true);
     record.set("is_open", true);
-    record.set("children", fastn.mutableList([]));
+    record.set("children", fastn.mutableList([function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "Reliable Scalable and Maintainable Application");
+      record.set("url", "ddd/dia-1/");
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }()]));
     return record;
   }());
   return record;
