--- a/learn/preflight-request/index.html
+++ b/learn/preflight-request/index.html
@@ -17,7 +17,7 @@
                 <script src="prism-8FE3A42AD547E2DBBC9FE16BA059F8F1870D613AD0C5B0B013D6205B72A62BAF.js"></script>
                 <script src="default-C2CA3992428D050C1B2BBBA6D7DF81888C4ADE97BD649552485583B581E1C58F.js"></script>
                 <link rel="stylesheet" href="prism-73F718B9234C00C5C14AB6A11BF239A103F0B0F93B69CD55CB5C6530501182EB.css">
-                <script src="-/fastn-stack.github.io/fastn-js/download.js"></script><script src="-/arjaupashak.com/search.js"></script>
+                <script src="-/arjaupashak.com/search.js"></script><script src="-/fastn-stack.github.io/fastn-js/download.js"></script>
             
     
 
@@ -5087,6 +5087,43 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
       return record;
     }()]));
     return record;
+  }(),
+  function () {
+    let record = fastn.recordInstance({
+    });
+    record.set("title", "Designing data intensive application");
+    record.set("url", "ddd/data-intensive-application/");
+    record.set("description", null);
+    record.set("path", null);
+    record.set("number", null);
+    record.set("font_icon", null);
+    record.set("img_src", null);
+    record.set("bury", false);
+    record.set("document", null);
+    record.set("is_heading", false);
+    record.set("is_disabled", false);
+    record.set("is_active", false);
+    record.set("is_open", false);
+    record.set("children", fastn.mutableList([function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "Reliable Scalable and Maintainable Application");
+      record.set("url", "ddd/dia-1/");
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }()]));
+    return record;
   }()]));
   record.set("current_section", function () {
     let record = fastn.recordInstance({
@@ -8299,6 +8336,43 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
       record.set("is_disabled", false);
       record.set("is_active", true);
       record.set("is_open", true);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }()]));
+    return record;
+  }(),
+  function () {
+    let record = fastn.recordInstance({
+    });
+    record.set("title", "Designing data intensive application");
+    record.set("url", "ddd/data-intensive-application/");
+    record.set("description", null);
+    record.set("path", null);
+    record.set("number", null);
+    record.set("font_icon", null);
+    record.set("img_src", null);
+    record.set("bury", false);
+    record.set("document", null);
+    record.set("is_heading", false);
+    record.set("is_disabled", false);
+    record.set("is_active", false);
+    record.set("is_open", false);
+    record.set("children", fastn.mutableList([function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "Reliable Scalable and Maintainable Application");
+      record.set("url", "ddd/dia-1/");
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
       record.set("children", fastn.mutableList([]));
       return record;
     }()]));
