--- a/search/index.html
+++ b/search/index.html
@@ -10028,6 +10028,43 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_search___sitemap", funct
           return record;
         }()]));
         return record;
+      }(),
+      function () {
+        let record = fastn.recordInstance({
+        });
+        record.set("title", "Designing data intensive application");
+        record.set("url", "/ddd/data-intensive-application/");
+        record.set("description", null);
+        record.set("path", null);
+        record.set("number", null);
+        record.set("font_icon", null);
+        record.set("img_src", null);
+        record.set("bury", false);
+        record.set("document", null);
+        record.set("is_heading", false);
+        record.set("is_disabled", false);
+        record.set("is_active", false);
+        record.set("is_open", false);
+        record.set("children", fastn.mutableList([function () {
+          let record = fastn.recordInstance({
+          });
+          record.set("title", "Reliable Scalable and Maintainable Application");
+          record.set("url", "/ddd/dia-1/");
+          record.set("description", null);
+          record.set("path", null);
+          record.set("number", null);
+          record.set("font_icon", null);
+          record.set("img_src", null);
+          record.set("bury", false);
+          record.set("document", null);
+          record.set("is_heading", false);
+          record.set("is_disabled", false);
+          record.set("is_active", false);
+          record.set("is_open", false);
+          record.set("children", fastn.mutableList([]));
+          return record;
+        }()]));
+        return record;
       }()]));
       return record;
     }(),
