deploy: d214d6b8e931bc4bf391e4aa19fdd4c3757f29bf

--- a/ddd/preflight-cors-issue/index.html
+++ b/ddd/preflight-cors-issue/index.html
@@ -5125,6 +5125,25 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
       record.set("is_open", false);
       record.set("children", fastn.mutableList([]));
       return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "Data Models and Query Languages");
+      record.set("url", "ddd/dia-2/");
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
     }()]));
     return record;
   }()]));
@@ -8365,6 +8384,25 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
       });
       record.set("title", "Reliable Scalable and Maintainable Application");
       record.set("url", "ddd/dia-1/");
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "Data Models and Query Languages");
+      record.set("url", "ddd/dia-2/");
       record.set("description", null);
       record.set("path", null);
       record.set("number", null);
