--- a/ddd/data-intensive-application/index.html
+++ b/ddd/data-intensive-application/index.html
@@ -4857,6 +4857,25 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
       record.set("is_open", false);
       record.set("children", fastn.mutableList([]));
       return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "Data Models and Query Languages");
+      record.set("url", "ddd/dia-2/");
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
     }()]));
     return record;
   }()]));
@@ -4919,6 +4938,25 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
       });
       record.set("title", "Reliable Scalable and Maintainable Application");
       record.set("url", "ddd/dia-1/");
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "Data Models and Query Languages");
+      record.set("url", "ddd/dia-2/");
       record.set("description", null);
       record.set("path", null);
       record.set("number", null);
@@ -8128,6 +8166,25 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
       record.set("is_open", false);
       record.set("children", fastn.mutableList([]));
       return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "Data Models and Query Languages");
+      record.set("url", "ddd/dia-2/");
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
     }()]));
     return record;
   }()]));
@@ -8190,6 +8247,25 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
       });
       record.set("title", "Reliable Scalable and Maintainable Application");
       record.set("url", "ddd/dia-1/");
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "Data Models and Query Languages");
+      record.set("url", "ddd/dia-2/");
       record.set("description", null);
       record.set("path", null);
       record.set("number", null);
