deploy: 008b75d8f1635617cf98b814c5d34ffac515fd40

--- a/ddd/dia-2/index.html
+++ b/ddd/dia-2/index.html
@@ -4123,7 +4123,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_assets__files.static.log
   let record = fastn.recordInstance({
   });
   record.set("light", "-/arjaupashak.com/static/logo.svg");
-  record.set("dark", "-/arjaupashak.com/static/logo.svg");
+  record.set("dark", "-/arjaupashak.com/static/logo-dark.svg");
   return record;
 }());
 fastn_utils.createNestedObject(global, "arjaupashak_com_assets__files.search.js", "-/arjaupashak.com/search.js");
@@ -6532,6 +6532,25 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
       record.set("is_disabled", false);
       record.set("is_active", true);
       record.set("is_open", true);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "Storage and Retrieval");
+      record.set("url", "ddd/dia-3/");
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
       record.set("children", fastn.mutableList([]));
       return record;
     }()]));
@@ -9804,6 +9823,25 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
       record.set("is_disabled", false);
       record.set("is_active", true);
       record.set("is_open", true);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "Storage and Retrieval");
+      record.set("url", "ddd/dia-3/");
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
       record.set("children", fastn.mutableList([]));
       return record;
     }()]));
