--- a/rust/rc/index.html
+++ b/rust/rc/index.html
@@ -17,7 +17,7 @@
                 <script src="prism-8FE3A42AD547E2DBBC9FE16BA059F8F1870D613AD0C5B0B013D6205B72A62BAF.js"></script>
                 <script src="default-C2CA3992428D050C1B2BBBA6D7DF81888C4ADE97BD649552485583B581E1C58F.js"></script>
                 <link rel="stylesheet" href="prism-73F718B9234C00C5C14AB6A11BF239A103F0B0F93B69CD55CB5C6530501182EB.css">
-                <script src="-/fastn-stack.github.io/fastn-js/download.js"></script><script src="-/arjaupashak.com/search.js"></script>
+                <script src="-/arjaupashak.com/search.js"></script><script src="-/fastn-stack.github.io/fastn-js/download.js"></script>
             
     
 
@@ -2964,7 +2964,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_assets__files.static.log
   let record = fastn.recordInstance({
   });
   record.set("light", "-/arjaupashak.com/static/logo.svg");
-  record.set("dark", "-/arjaupashak.com/static/logo.svg");
+  record.set("dark", "-/arjaupashak.com/static/logo-dark.svg");
   return record;
 }());
 fastn_utils.createNestedObject(global, "arjaupashak_com_assets__files.search.js", "-/arjaupashak.com/search.js");
