--- a/ddd/dia-1/index.html
+++ b/ddd/dia-1/index.html
@@ -2899,7 +2899,7 @@ fastn_utils.createNestedObject(global, "arjaupashak_com_assets__files.static.log
   let record = fastn.recordInstance({
   });
   record.set("light", "-/arjaupashak.com/static/logo.svg");
-  record.set("dark", "-/arjaupashak.com/static/logo.svg");
+  record.set("dark", "-/arjaupashak.com/static/logo-dark.svg");
   return record;
 }());
 fastn_utils.createNestedObject(global, "arjaupashak_com_assets__files.search.js", "-/arjaupashak.com/search.js");
@@ -5297,6 +5297,25 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_header__sitema
       });
       record.set("title", "Data Models and Query Languages");
       record.set("url", "ddd/dia-2/");
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "Storage and Retrieval");
+      record.set("url", "ddd/dia-3/");
       record.set("description", null);
       record.set("path", null);
       record.set("number", null);
@@ -8569,6 +8588,25 @@ fastn_utils.createNestedObject(global, "fastn_community_github_io_doc_site_commo
       });
       record.set("title", "Data Models and Query Languages");
       record.set("url", "ddd/dia-2/");
+      record.set("description", null);
+      record.set("path", null);
+      record.set("number", null);
+      record.set("font_icon", null);
+      record.set("img_src", null);
+      record.set("bury", false);
+      record.set("document", null);
+      record.set("is_heading", false);
+      record.set("is_disabled", false);
+      record.set("is_active", false);
+      record.set("is_open", false);
+      record.set("children", fastn.mutableList([]));
+      return record;
+    }(),
+    function () {
+      let record = fastn.recordInstance({
+      });
+      record.set("title", "Storage and Retrieval");
+      record.set("url", "ddd/dia-3/");
       record.set("description", null);
       record.set("path", null);
       record.set("number", null);
