--- a/ddd/dia-3/index.html
+++ b/ddd/dia-3/index.html
@@ -626,7 +626,42 @@ efficiently.</p>
 Load the bitmaps for <code>product_sk = 31</code> and <code>store_sk = 3</code>, and calculate the
 bitwise <em>AND</em>. This works because the columns contain the rows in the same order,
 so the kth bit in one column’s bitmap corresponds to the same row as the kth bit
-in another column’s bitmap.</div></div></div></div><comment data-id="306"></comment><comment data-id="307"></comment></div><div data-id="308" class="ft_column __w-603"></div><comment data-id="309"></comment></div><div data-id="310" class="ft_row __pos-604 __p-605 __bw-606 __br-607 __bc-608 __b-609 __r-610 __z-611 __bgc-612"><comment data-id="311"></comment><div data-id="312" class="ft_row __cur-613"><img data-id="313" src="-/fastn-community.github.io/dark-mode-switcher/static/system-mode-active.png" class="__as-614 __w-615 __h-616"></img></div><comment data-id="314"></comment><comment data-id="315"></comment></div><comment data-id="316"></comment></div></div></div></body><style id="styles">
+in another column’s bitmap.</div><div data-id="306" class="ft_column __w-603"><h2 data-id="307" id="sort-order-in-column-storage" class="__rl-604 __w-605 __pt-606 __mb-607 __c-608">Sort Order in Column Storage</h2><comment data-id="308"></comment><div data-id="309" class="__rl-609 __w-610 __c-611"><p>We can choose to impose an order, like we did with SSTables previously, and use
+that as an indexing mechanism.</p>
+<p>The administrator of the database can choose the columns by which the table
+should be sorted, using their knowledge of common queries. For example, if
+queries often target date ranges, such as the last month, it might make sense to
+make <code>date_key</code> the first sort key.</p>
+<p>If <code>date_key</code> is the first sort key, it might make sense for <code>product_sk</code> to be
+the second sort key so that all sales for the same product on the same day are
+grouped together in storage. That will help queries that need to group or filter
+sales by product within a certain date range.</p>
+<p>Another advantage of sorted order is that it can help with compression of columns. If
+the primary sort column does not have many distinct values, then after sorting, it will
+have long sequences where the same value is repeated many times in a row. A simple
+run-length encoding, like we used for the bitmaps, could compress that column down
+to a few kilobytes—even if the table has billions of rows.</p>
+That compression effect is strongest on the first sort key. The second and third sort
+keys will be more jumbled up, and thus not have such long runs of repeated values.
+Columns further down the sorting priority appear in essentially random order, so
+they probably won’t compress as well. But having the first few columns sorted is still
+a win overall.</div><div data-id="310" class="ft_column __w-612"></div></div><div data-id="311" class="ft_column __w-613"><h3 data-id="312" id="several-different-sort-orders" class="__rl-614 __w-615 __pt-616 __mb-617 __c-618">Several different sort orders</h3><comment data-id="313"></comment><div data-id="314" class="__rl-619 __w-620 __c-621">Having multiple sort orders in a column-oriented store is a bit similar to having
+multiple secondary indexes in a row-oriented store. But the big difference is
+that the row-oriented store keeps every row in one place (in the heap file or a
+clustered index), and secondary indexes just contain pointers to the matching
+rows. In a column store, there normally aren’t any pointers to data elsewhere,
+only columns containing values.</div><div data-id="315" class="ft_column __w-622"></div></div><div data-id="316" class="ft_column __w-623"><h2 data-id="317" id="aggregation-data-cubes-and-materialized-views" class="__rl-624 __w-625 __pt-626 __mb-627 __c-628">Aggregation: Data Cubes and Materialized Views</h2><comment data-id="318"></comment><div data-id="319" class="__rl-629 __w-630 __c-631"><p>Some aggregate function are common, such as COUNT, SUM, AVG, MIN, or MAX in SQL.
+If the same aggregates are used by many different queries, it can be wasteful to
+crunch through the raw data every time. Why not cache some of the counts or sums
+that queries use most often?</p>
+<p><strong>Materialized view</strong> is a table-like object whose contents are the results of
+some query.</p>
+When the underlying data changes, a materialized view needs to be updated, because
+it is a denormalized copy of the data. The database can do that automatically, but
+such updates make writes more expensive, which is why materialized views are not
+often used in OLTP databases. In read-heavy data warehouses they can make more
+sense (whether or not they actually improve read performance depends on the
+individual case).</div><div data-id="320" class="ft_column __w-632"></div></div><div data-id="321" class="ft_column __w-633 __h-634 __jc-635 __ali-636"><img data-id="322" src="-/arjaupashak.com/ddd/data-intensive-application/images/3-5.png" class="__w-637 __h-638 __mxw-639"></img><comment data-id="323"></comment><comment data-id="324"></comment></div></div></div></div><comment data-id="325"></comment><comment data-id="326"></comment></div><div data-id="327" class="ft_column __w-640"></div><comment data-id="328"></comment></div><div data-id="329" class="ft_row __pos-641 __p-642 __bw-643 __br-644 __bc-645 __b-646 __r-647 __z-648 __bgc-649"><comment data-id="330"></comment><div data-id="331" class="ft_row __cur-650"><img data-id="332" src="-/fastn-community.github.io/dark-mode-switcher/static/system-mode-active.png" class="__as-651 __w-652 __h-653"></img></div><comment data-id="333"></comment><comment data-id="334"></comment></div><comment data-id="335"></comment></div></div></div></body><style id="styles">
     .__w-1 { width: 100%; }
 	.__h-2 { height: 100%; }
 	.__w-3 { width: 100%; }
@@ -1506,21 +1541,82 @@ in another column’s bitmap.</div></div></div></div><comment data-id="306"></co
 	.__c-602:visited { color: #7C7C7C !important; }
 	body.dark  .__c-602:visited { color: #B8B8B8 !important; }
 	.__w-603 { width: 100%; }
-	.__pos-604 { position: fixed; }
-	.__p-605 { padding: 10px; }
-	.__bw-606 { border-width: 1px; }
-	.__br-607 { border-radius: 4px; }
-	.__bc-608 { border-color: #D2D2D2; }
-	body.dark .__bc-608 { border-color: #434547; }
-	.__b-609 { bottom: 25px; }
-	.__r-610 { right: 25px; }
-	.__z-611 { z-index: 99999999999999; }
-	.__bgc-612 { background-color: #FFFFFF; }
-	body.dark .__bgc-612 { background-color: #000000; }
-	.__cur-613 { cursor: pointer; }
-	.__as-614 { align-self: center; }
-	.__w-615 { width: 19px; }
-	.__h-616 { height: 19px; }
+	.__rl-604 {  font-family: fifthtry-github-io-manrope-font-Manrope; letter-spacing: 0px; font-size: 32px; font-weight: 700; line-height: 48px; }
+	body.mobile .__rl-604 {  font-family: fifthtry-github-io-manrope-font-Manrope; letter-spacing: 0px; font-size: 26px; font-weight: 700; line-height: 40px; }
+	.__w-605 { width: 100%; }
+	.__pt-606 { padding-top: 0.3em; }
+	.__mb-607 { margin-bottom: 0.5rem; }
+	.__c-608 { color: #333333 !important; }
+	body.dark .__c-608 { color: #FFFFFF !important; }
+	.__c-608:visited { color: #333333 !important; }
+	body.dark  .__c-608:visited { color: #FFFFFF !important; }
+	.__rl-609 {  font-family: fifthtry-github-io-manrope-font-Manrope; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
+	body.mobile .__rl-609 {  font-family: fifthtry-github-io-manrope-font-Manrope; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
+	.__w-610 { width: 100%; }
+	.__c-611 { color: #7C7C7C !important; }
+	body.dark .__c-611 { color: #B8B8B8 !important; }
+	.__c-611:visited { color: #7C7C7C !important; }
+	body.dark  .__c-611:visited { color: #B8B8B8 !important; }
+	.__w-612 { width: 100%; }
+	.__w-613 { width: 100%; }
+	.__rl-614 {  font-family: fifthtry-github-io-manrope-font-Manrope; letter-spacing: 0px; font-size: 24px; font-weight: 700; line-height: 36px; }
+	body.mobile .__rl-614 {  font-family: fifthtry-github-io-manrope-font-Manrope; letter-spacing: 0px; font-size: 22px; font-weight: 700; line-height: 29px; }
+	.__w-615 { width: 100%; }
+	.__pt-616 { padding-top: 0.17em; }
+	.__mb-617 { margin-bottom: 0.5rem; }
+	.__c-618 { color: #333333 !important; }
+	body.dark .__c-618 { color: #FFFFFF !important; }
+	.__c-618:visited { color: #333333 !important; }
+	body.dark  .__c-618:visited { color: #FFFFFF !important; }
+	.__rl-619 {  font-family: fifthtry-github-io-manrope-font-Manrope; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
+	body.mobile .__rl-619 {  font-family: fifthtry-github-io-manrope-font-Manrope; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
+	.__w-620 { width: 100%; }
+	.__c-621 { color: #7C7C7C !important; }
+	body.dark .__c-621 { color: #B8B8B8 !important; }
+	.__c-621:visited { color: #7C7C7C !important; }
+	body.dark  .__c-621:visited { color: #B8B8B8 !important; }
+	.__w-622 { width: 100%; }
+	.__w-623 { width: 100%; }
+	.__rl-624 {  font-family: fifthtry-github-io-manrope-font-Manrope; letter-spacing: 0px; font-size: 32px; font-weight: 700; line-height: 48px; }
+	body.mobile .__rl-624 {  font-family: fifthtry-github-io-manrope-font-Manrope; letter-spacing: 0px; font-size: 26px; font-weight: 700; line-height: 40px; }
+	.__w-625 { width: 100%; }
+	.__pt-626 { padding-top: 0.3em; }
+	.__mb-627 { margin-bottom: 0.5rem; }
+	.__c-628 { color: #333333 !important; }
+	body.dark .__c-628 { color: #FFFFFF !important; }
+	.__c-628:visited { color: #333333 !important; }
+	body.dark  .__c-628:visited { color: #FFFFFF !important; }
+	.__rl-629 {  font-family: fifthtry-github-io-manrope-font-Manrope; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 28px; }
+	body.mobile .__rl-629 {  font-family: fifthtry-github-io-manrope-font-Manrope; letter-spacing: 0px; font-size: 16px; font-weight: 400; line-height: 24px; }
+	.__w-630 { width: 100%; }
+	.__c-631 { color: #7C7C7C !important; }
+	body.dark .__c-631 { color: #B8B8B8 !important; }
+	.__c-631:visited { color: #7C7C7C !important; }
+	body.dark  .__c-631:visited { color: #B8B8B8 !important; }
+	.__w-632 { width: 100%; }
+	.__w-633 { width: 100%; }
+	.__h-634 { height: null; }
+	.__jc-635 { justify-content: center; }
+	.__ali-636 { align-items: center; }
+	.__w-637 { width: auto; }
+	.__h-638 { height: auto; }
+	.__mxw-639 { max-width: 100%; }
+	.__w-640 { width: 100%; }
+	.__pos-641 { position: fixed; }
+	.__p-642 { padding: 10px; }
+	.__bw-643 { border-width: 1px; }
+	.__br-644 { border-radius: 4px; }
+	.__bc-645 { border-color: #D2D2D2; }
+	body.dark .__bc-645 { border-color: #434547; }
+	.__b-646 { bottom: 25px; }
+	.__r-647 { right: 25px; }
+	.__z-648 { z-index: 99999999999999; }
+	.__bgc-649 { background-color: #FFFFFF; }
+	body.dark .__bgc-649 { background-color: #000000; }
+	.__cur-650 { cursor: pointer; }
+	.__as-651 { align-self: center; }
+	.__w-652 { width: 19px; }
+	.__h-653 { height: 19px; }
     </style><style>
 
 @font-face { unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
@@ -3689,6 +3785,29 @@ font-family: fifthtry-github-io-manrope-font-Manrope }
       function (root, inherited) {
         let rooti0 = arjaupashak_com_FASTN_ds__markdown(root, inherited, {
           body: "Bitmap indexes such as these are very well suited for the kinds of queries that are\ncommon in a data warehouse. For example:\n\n`WHERE product_sk IN (30, 68, 69):`\n\nLoad the three bitmaps for `product_sk = 30`, `product_sk = 68`, and `product_sk\n= 69`, and calculate the bitwise *OR* of the three bitmaps, which can be done very\nefficiently.\n\n`WHERE product_sk = 31 AND store_sk = 3:`\n\nLoad the bitmaps for `product_sk = 31` and `store_sk = 3`, and calculate the\nbitwise *AND*. This works because the columns contain the rows in the same order,\nso the kth bit in one column’s bitmap corresponds to the same row as the kth bit\nin another column’s bitmap."
+        });
+      },
+      function (root, inherited) {
+        let rooti0 = arjaupashak_com_FASTN_ds__h2(root, inherited, {
+          title: "Sort Order in Column Storage",
+          body: "We can choose to impose an order, like we did with SSTables previously, and use\nthat as an indexing mechanism.\n\nThe administrator of the database can choose the columns by which the table\nshould be sorted, using their knowledge of common queries. For example, if\nqueries often target date ranges, such as the last month, it might make sense to\nmake `date_key` the first sort key.\n\nIf `date_key` is the first sort key, it might make sense for `product_sk` to be\nthe second sort key so that all sales for the same product on the same day are\ngrouped together in storage. That will help queries that need to group or filter\nsales by product within a certain date range.\n\nAnother advantage of sorted order is that it can help with compression of columns. If\nthe primary sort column does not have many distinct values, then after sorting, it will\nhave long sequences where the same value is repeated many times in a row. A simple\nrun-length encoding, like we used for the bitmaps, could compress that column down\nto a few kilobytes—even if the table has billions of rows.\n\nThat compression effect is strongest on the first sort key. The second and third sort\nkeys will be more jumbled up, and thus not have such long runs of repeated values.\nColumns further down the sorting priority appear in essentially random order, so\nthey probably won’t compress as well. But having the first few columns sorted is still\na win overall."
+        });
+      },
+      function (root, inherited) {
+        let rooti0 = arjaupashak_com_FASTN_ds__h3(root, inherited, {
+          title: "Several different sort orders",
+          body: "Having multiple sort orders in a column-oriented store is a bit similar to having\nmultiple secondary indexes in a row-oriented store. But the big difference is\nthat the row-oriented store keeps every row in one place (in the heap file or a\nclustered index), and secondary indexes just contain pointers to the matching\nrows. In a column store, there normally aren’t any pointers to data elsewhere,\nonly columns containing values."
+        });
+      },
+      function (root, inherited) {
+        let rooti0 = arjaupashak_com_FASTN_ds__h2(root, inherited, {
+          title: "Aggregation: Data Cubes and Materialized Views",
+          body: "Some aggregate function are common, such as COUNT, SUM, AVG, MIN, or MAX in SQL.\nIf the same aggregates are used by many different queries, it can be wasteful to\ncrunch through the raw data every time. Why not cache some of the counts or sums\nthat queries use most often?\n\n**Materialized view** is a table-like object whose contents are the results of\nsome query.\n\nWhen the underlying data changes, a materialized view needs to be updated, because\nit is a denormalized copy of the data. The database can do that automatically, but\nsuch updates make writes more expensive, which is why materialized views are not\noften used in OLTP databases. In read-heavy data warehouses they can make more\nsense (whether or not they actually improve read performance depends on the\nindividual case)."
+        });
+      },
+      function (root, inherited) {
+        let rooti0 = arjaupashak_com_FASTN_ds__image(root, inherited, {
+          src: global.arjaupashak_com_assets__files.get("ddd").get("data_intensive_application").get("images").get("_3_5").get("png")
         });
       }
       ]),
@@ -11494,6 +11613,13 @@ let arjaupashak_com_FASTN_ds__page = function (parent, inherited, args)
   }
 }
 global["arjaupashak_com_FASTN_ds__page"] = arjaupashak_com_FASTN_ds__page;
+fastn_utils.createNestedObject(global, "arjaupashak_com_assets__files.ddd.data_intensive_application.images.3_5.png", function () {
+  let record = fastn.recordInstance({
+  });
+  record.set("light", "-/arjaupashak.com/ddd/data-intensive-application/images/3-5.png");
+  record.set("dark", "-/arjaupashak.com/ddd/data-intensive-application/images/3-5-dark.png");
+  return record;
+}());
 fastn_utils.createNestedObject(global, "arjaupashak_com_assets__files.ddd.data_intensive_application.images.3_4.png", function () {
   let record = fastn.recordInstance({
   });
